--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         header {
             text-align: center;
             padding: 6em 2em 2em;
-            background: url('Mega-Victoria-Corsica.jpg') no-repeat center center;
+            background: href=(https://cdn.pixabay.com/photo/2016/06/10/18/04/harbour-entrance-1448608_1280.jpg) no-repeat center center;
             background-size: cover;
             color: #ffffff;
         }
