--- a/projekte.html
+++ b/projekte.html
@@ -102,7 +102,7 @@
         <p>Hier sind Projekte von mir:</p>
         <p>Ich habe schon ein paar Website geschrieben,</br> als ich bei Betrieben Schnuppern war.</p>
         <p>Screenshot:</p>
-        <img src="..." alt="Scrennshot">
+        <img src=".." alt="Scrennshot">
         <p>Verwendete Tools:</p>
         <p>Visual Code Studio und W3schools</p>
     </div>
