--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         header {
             text-align: center;
             padding: 6em 2em 2em;
-            background: url('https://cdn.pixabay.com/photo/2016/06/10/18/04/harbour-entrance-1448608_1280.jpg') no-repeat center center;
+            background: url('https://images.unsplash.com/photo-1523908189041-954a0fb27470?q=80&w=1894&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat center center;
             background-size: cover;
             color: #ffffff;
         }
