--- a/faehigkeiten.html
+++ b/faehigkeiten.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="de">
 <head>
     <meta charset="UTF-8">
@@ -7,16 +7,13 @@
     <link rel="stylesheet" href="style.css">
     <style>
         body {
-            background: url('https://cdn.pixabay.com/photo/2020/08/29/09/26/beach-5526592_1280.jpg') no-repeat center center fixed; 
-            background-size: cover;
-            color: #ffffff;
+            background: #ffffff;
+            color: #000000;
             font-family: Arial, sans-serif;
+            margin: 0;
             display: flex;
             flex-direction: column;
-            align-items: center;
-            justify-content: center;
             min-height: 100vh;
-            margin: 0;
         }
         nav {
             display: flex;
@@ -24,24 +21,13 @@
             align-items: center;
             background: rgba(0, 0, 0, 0.5);
             padding: 1em;
-            width: 100%;
             position: fixed;
             top: 0;
-        }
-        nav .logo {
-            display: flex;
-            align-items: center;
-            margin-left: auto;
-            padding-right: 20px;
-        }
-        nav .logo img {
-            max-height: 40px;
-            margin-right: 10px;
-            border-radius: 50%;
+            width: 100%;
+            z-index: 1000;
         }
         nav .menu {
             display: flex;
-            justify-content: flex-start;
         }
         nav .menu a {
             color: #ffffff;
@@ -52,26 +38,52 @@
         nav .menu a:hover {
             text-decoration: underline;
         }
-        .container {
+        nav .logo {
             display: flex;
-            justify-content: space-between;
             align-items: center;
+            margin-left: auto;
+            padding-right: 40px;
+        }
+        nav .logo img {
+            max-height: 40px;
+            margin-right: 10px;
+            border-radius: 50%;
+        }
+        header {
+            text-align: center;
+            padding: 0em 0em;
+            background: url('https://cdn.pixabay.com/photo/2025/02/13/10/24/ship-9403525_1280.jpg') no-repeat center center;
+            background-size: cover;
+            color: #ffffff;
+        }
+        .container {
             text-align: center;
             padding: 2em;
-            background: rgba(255, 255, 255, 0.8);
-            color: #000;
+            background: #ffffff;
+            color: #000000;
+            margin: 2em auto;
             width: 80%;
             border-radius: 10px;
-            margin-top: 5em;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .container p {
+            margin-bottom: 1em;
         }
         footer {
             text-align: center;
             padding: 1em;
             background: rgba(0, 0, 0, 0.5);
-            position: fixed;
-            width: 100%;
-            bottom: 0;
             color: #ffffff;
+            font-size: 1em;
+            margin-top: auto;
+        }
+        footer a {
+            color: #ffffff;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        footer a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
@@ -80,26 +92,27 @@
         <div class="menu">
             <a href="index.html">Startseite</a>
             <a href="ueber-mich.html">Über mich</a>
-            <a href="projekte.html">Projekte</a>
+            <a href="projekte.html">Zeichnungen</a>
             <a href="faehigkeiten.html">Fähigkeiten</a>
             <a href="kontakt.html">Kontakt</a>
         </div>
         <div class="logo">
-            <img src="Erik_Spinnler_Foto.jpeg" alt="Logo">
-            <span>Erik Spinnler</span>
+            <img src="https://media-zrh1-1.cdn.whatsapp.net/v/t61.24694-24/457292965_1231500081394009_7728197577812856276_n.jpg?ccb=11-4&oh=01_Q5AaIBgYXFYmtUnXTB7r3pkBChoVc-4yQfo4R715RAQxo_oA&oe=67BAAD3F&_nc_sid=5e03e0&_nc_cat=111" alt="Logo">
+            <span>Lorin Neuenschwander</span>
         </div>
     </nav>
-    <div class="container">
+    <header>
         <h1>Fähigkeiten</h1>
-        <h3>Technische Fähigkeiten</h3>
-        <p>Ich bin gut in HTML und CSS und kann damit Webseiten erstellen. </br> Außerdem möchte ich Java und Python lernen, </br> um meine Fähigkeiten weiter zu verbessern.</p>
-        <h3>Soft Skills</h3>
-            <p>Teamarbeit: </br> Effektive Zusammenarbeit, </br> im Team.</p>
-            <p>Kreativität: </br> Entwicklung kreativer Lösungen, </br> für technische Probleme.</p>
+    </header>
+    <div class="container section">
+        <p>Ich bin ein echtes Talent, wenn es ums Zeichnen geht! 🎨📸<br>
+            Ich zeichne Schiffe mit unglaublichen Details und bringe ihre Eleganz perfekt auf Papier. 🚢<br>
+            Außerdem bin ich ein leidenschaftlicher Fotograf – besonders von Zügen 🚆 und Schiffen.<br>
+            Meine Bilder fangen nicht nur die Fahrzeuge, sondern auch die Atmosphäre ein. Ein echtes Multitalent! 🔥
+        </p>
     </div>
     <footer>
-        &copy; 2025 Erik Spinnler
+        &copy; 2025 Lorin Neuenschwander
     </footer>
 </body>
 </html>
-
