--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
         <div class="menu">
             <a href="index.html">Startseite</a>
             <a href="ueber-mich.html">Über mich</a>
-            <a href="projekte.html">Projekte</a>
+            <a href="projekte.html">Zeichnungen</a>
             <a href="faehigkeiten.html">Fähigkeiten</a>
             <a href="kontakt.html">Kontakt</a>
         </div>
         <div class="logo">
-            <img src="Erik_Spinnler_Foto.jpeg" alt="Logo">
-            <span>Erik Spinnler</span>
+            <img src="https://media-zrh1-1.cdn.whatsapp.net/v/t61.24694-24/457292965_1231500081394009_7728197577812856276_n.jpg?ccb=11-4&oh=01_Q5AaIBgYXFYmtUnXTB7r3pkBChoVc-4yQfo4R715RAQxo_oA&oe=67BAAD3F&_nc_sid=5e03e0&_nc_cat=111" alt="Logo">
+            <span>Lorin Neuenschwander</span>
         </div>
     </nav>
     <header>
@@ -112,7 +112,7 @@
         <p>Viel Spaß beim Stöbern! 🏝️🚀</p>
     </div>
     <footer>
-        &copy; 2025 Erik Spinnler
+        &copy; 2025 Lorin Neuenschwander
     </footer>
 </body>
 </html>
