--- a/projekte.html
+++ b/projekte.html
@@ -3,20 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projekte</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Zeichnungen</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
     <style>
         body {
-            background: url('https://cdn.pixabay.com/photo/2020/08/29/09/26/beach-5526592_1280.jpg') no-repeat center center fixed; 
-            background-size: cover;
-            color: #ffffff;
+            background: #ffffff;
+            color: #000000;
             font-family: Arial, sans-serif;
+            margin: 0;
             display: flex;
             flex-direction: column;
-            align-items: center;
-            justify-content: center;
             min-height: 100vh;
-            margin: 0;
         }
         nav {
             display: flex;
@@ -24,24 +21,13 @@
             align-items: center;
             background: rgba(0, 0, 0, 0.5);
             padding: 1em;
-            width: 100%;
             position: fixed;
             top: 0;
-        }
-        nav .logo {
-            display: flex;
-            align-items: center;
-            margin-left: auto;
-            padding-right: 20px; /* Abstand nach links hinzufügen */
-        }
-        nav .logo img {
-            max-height: 40px;
-            margin-right: 10px;
-            border-radius: 50%; /* Rundes Bild */
+            width: 100%;
+            z-index: 1000;
         }
         nav .menu {
             display: flex;
-            justify-content: flex-start;
         }
         nav .menu a {
             color: #ffffff;
@@ -52,34 +38,79 @@
         nav .menu a:hover {
             text-decoration: underline;
         }
-        .container {
+        nav .logo {
             display: flex;
-            justify-content: space-between;
             align-items: center;
+            margin-left: auto;
+            padding-right: 40px;
+            color: white;
+        }
+        nav .logo img {
+            max-height: 40px;
+            margin-right: 10px;
+            border-radius: 50%;
+        }
+        header {
+            text-align: center;
+            padding: 6em 2em 2em;
+            background: url('https://images.unsplash.com/photo-1524643100594-ced88debb9cd?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat center center;
+            background-size: cover;
+            color: #ffffff;
+        }
+        .container {
             text-align: center;
             padding: 2em;
-            background: rgba(255, 255, 255, 0.8);
-            color: #000;
+            background: #ffffff;
+            color: #000000;
+            margin: 2em auto;
             width: 80%;
             border-radius: 10px;
-            margin-top: 5em;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
-        .container img {
-            max-width: 30%;
+        .swiper {
+            width: 170vmin;
+            height: calc(130vmin / 1.414);
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+            border-radius: 10px;
+            overflow: hidden;
+            margin: 0 auto;
+        }
+        .swiper-slide {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+        .swiper-slide img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
             border-radius: 10px;
         }
-        .container .text {
-            flex: 1;
-            margin: 0 2em;
+        .swiper-button-next, .swiper-button-prev {
+            color: #545454;
+        }
+        .swiper-pagination-bullet {
+            background: #000;
         }
         footer {
             text-align: center;
             padding: 1em;
             background: rgba(0, 0, 0, 0.5);
-            position: fixed;
-            width: 100%;
-            bottom: 0;
             color: #ffffff;
+            font-size: 1em;
+            margin-top: auto;
+        }
+        footer a {
+            color: #ffffff;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        footer a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
@@ -88,29 +119,70 @@
         <div class="menu">
             <a href="index.html">Startseite</a>
             <a href="ueber-mich.html">Über mich</a>
-            <a href="projekte.html">Projekte</a>
+            <a href="projekte.html">Zeichnungen</a>
             <a href="faehigkeiten.html">Fähigkeiten</a>
             <a href="kontakt.html">Kontakt</a>
         </div>
         <div class="logo">
-            <img src="Erik_Spinnler_Foto.jpeg" alt="Logo">
-            <span>Erik Spinnler</span>
+            <img src="https://cdn.pixabay.com/photo/2025/02/14/11/45/11-45-06-916_1280.png" alt="Logo">
+            <span>Lorin Neuenschwander</span>
         </div>
     </nav>
+
+    <header>
+        <h1>Zeichnungen</h1>
+    </header>
+
     <div class="container">
-        <h1>Projekte</h1>
-        <p>Hier sind Projekte von mir:</p>
-        <p>Ich habe schon ein paar Website geschrieben,</br> als ich bei Betrieben Schnuppern war.</p>
-        <p>Screenshot:</p>
-        <img src=".." alt="Scrennshot">
-        <p>Verwendete Tools:</p>
-        <p>Visual Code Studio und W3schools</p>
+        <div class="swiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <img src="https://cdn.pixabay.com/photo/2025/02/14/08/57/ship-9406212_1280.jpg" alt="Berglandschaft">
+                </div>
+                <div class="swiper-slide">
+                    <img src="https://cdn.pixabay.com/photo/2025/02/14/08/57/ship-9406214_1280.jpg" alt="See im Sonnenuntergang">
+                </div>
+                <div class="swiper-slide">
+                    <img src="https://cdn.pixabay.com/photo/2025/02/14/08/57/ship-9406213_1280.jpg" alt="Wald im Nebel">
+                </div>
+                <div class="swiper-slide">
+                    <img src="https://cdn.pixabay.com/photo/2025/02/14/07/55/ship-9406031_1280.jpg" alt="Wald im Nebel">
+                </div>
+                <div class="swiper-slide">
+                    <img src="https://cdn.pixabay.com/photo/2025/02/14/07/55/ocean-9406030_1280.jpg" alt="Wald im Nebel">
+                </div>
+            </div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+        </div>    
     </div>
+
     <footer>
-        &copy; 2025 Erik Spinnler
+        &copy; 2025 Lorin Neuenschwander
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script>
+        const swiper = new Swiper('.swiper', {
+            loop: true,
+            pagination: {
+                el: '.swiper-pagination',
+                clickable: true,
+            },
+            navigation: {
+                nextEl: '.swiper-button-next',
+                prevEl: '.swiper-button-prev',
+            },
+            autoplay: {
+                delay: 3000,
+                disableOnInteraction: false,
+            },
+            effect: 'fade',
+            fadeEffect: {
+                crossFade: true
+            }
+        });
+    </script>
 </body>
 </html>
-
-
-
